# qt5-configuration-plugins

./: CMakeLists.txt  README.md  pluginsconfig.h.in
compiler/: CMakeLists.txt
compiler/gravity/: CMakeLists.txt  allowance-star-template.conf.in  gravitycompileoperation.cpp  gravitycompileoperation.h  gravitycompilerplugin.cpp  gravitycompilerplugin.h  hemera-create-star-runtime-dir@.service.in  hemera-orbit-template.service.in  hemera-orbit-template.target.in  hemera-star-template.service.in  hemera-star-template.target.in  star-bus-policy-orbit-template.conf.in  star-bus-policy-star-template.conf.in  weston-star-template.service.in
compiler/hyperspace/: CMakeLists.txt  hyperdrive-transport-http.socket.in  hyperspacecompileoperation.cpp  hyperspacecompileoperation.h  hyperspacecompilerplugin.cpp  hyperspacecompilerplugin.h  mosquitto-astarte-gateway.conf.in
configure/: CMakeLists.txt
configure/ProxiedApplications/: CMakeLists.txt  CMakeLists.txt.in  proxiedapplicationsconfigureplugin.cpp  proxiedapplicationsconfigureplugin.h
configure/PythonApplications/: CMakeLists.txt  CMakeLists.txt.in  pythonapplicationsconfigureplugin.cpp  pythonapplicationsconfigureplugin.h
configure/Qt5Applications/: CMakeLists.txt  CMakeLists.txt.in  RootOperation.cmake.in  main-headless.cpp.in  main-quick2.cpp.in  main-widgets.cpp.in  qt5applicationsconfigureplugin.cpp  qt5applicationsconfigureplugin.h
generator/ProxiedApplications/: CMakeLists.txt  proxiedapplicationsgeneratorplugin.cpp  proxiedapplicationsgeneratorplugin.h
generator/PythonApplications/: CMakeLists.txt  pythonapplicationsgeneratorplugin.cpp  pythonapplicationsgeneratorplugin.h
generator/Qt5Applications/: CMakeLists.txt  qt5applicationsgeneratorplugin.cpp  qt5applicationsgeneratorplugin.h
properties-gen/: CMakeLists.txt
properties-gen/PythonApplications/: CMakeLists.txt  properties_template.py.in  pythonapplicationspropertiesplugin.cpp  pythonapplicationspropertiesplugin.h
properties-gen/Qt5Applications/: CMakeLists.txt  qt5applicationspropertiesplugin.cpp  qt5applicationspropertiesplugin.h
qml/settings/: CMakeLists.txt  hemeraqmlappliance.cpp  hemeraqmlappliance.h  hemeraqmlapplication.cpp  hemeraqmlapplication.h  hemeraqmlapplication_p.h  hemeraqmlapplicationprofile.cpp  hemeraqmlapplicationprofile.h  hemeraqmldevice.cpp  hemeraqmldevice.h  hemeraqmldirectfbdisplay.cpp  hemeraqmldirectfbdisplay.h  hemeraqmldisplay.cpp  hemeraqmldisplay.h  hemeraqmleglfsdisplay.cpp  hemeraqmleglfsdisplay.h  hemeraqmlframebufferdisplay.cpp  hemeraqmlframebufferdisplay.h  hemeraqmlguiappliance.cpp  hemeraqmlguiappliance.h  hemeraqmlhyperspaceqt5consumer.cpp  hemeraqmlhyperspaceqt5consumer.h  hemeraqmllanguagesupport.cpp  hemeraqmllanguagesupport.h  hemeraqmllinuxfbdisplay.cpp  hemeraqmllinuxfbdisplay.h  hemeraqmlorbit.cpp  hemeraqmlorbit.h  hemeraqmlproxiedapplication.cpp  hemeraqmlproxiedapplication.h  hemeraqmlpythonapplication.cpp  hemeraqmlpythonapplication.h  hemeraqmlrestartonfailureapplicationprofile.cpp  hemeraqmlrestartonfailureapplicationprofile.h  hemeraqmlrootoperation.cpp  hemeraqmlrootoperation.h  hemeraqmlsandbox.cpp  hemeraqmlsandbox.h  hemeraqmlsettingsplugin.cpp  hemeraqmlsettingsplugin.h  (+17 more)
qml/settings/Hemera/Settings/: qmldir
qml/settings/hyperspace/: CMakeLists.txt  hemeraqmlsettingsastartegateway.cpp  hemeraqmlsettingsastartegateway.h  hemeraqmlsettingsastartetransport.cpp  hemeraqmlsettingsastartetransport.h  hemeraqmlsettingshttptransport.cpp  hemeraqmlsettingshttptransport.h  hemeraqmlsettingshyperspace.cpp  hemeraqmlsettingshyperspace.h  hemeraqmlsettingshyperspaceplugin.cpp  hemeraqmlsettingshyperspaceplugin.h  hemeraqmlsettingshyperspacetransport.cpp  hemeraqmlsettingshyperspacetransport.h  hemeraqmlsettingsmqtttransport.cpp  hemeraqmlsettingsmqtttransport.h  hemeraqmlsettingsnetworklisten.cpp  hemeraqmlsettingsnetworklisten.h
qml/settings/hyperspace/Hemera/Settings/Hyperspace/: qmldir
tools/: CMakeLists.txt
tools/hemera-spec-gen/: CMakeLists.txt  hemera_app.spec.in  main.cpp  specgenerator.cpp  specgenerator.h
